fixes overflow x

--- a/css/miniiad.css
+++ b/css/miniiad.css
@@ -4,11 +4,14 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 html, body {
   background: white;
   text-align: center;
   font-family: 'Poppins', Helvetica, "Helvetica Neue";
-  overflow-x: hidden;
 }
 
 section {
